adding the first UX

--- a/src/app/explore-container/explore-container.component.html
+++ b/src/app/explore-container/explore-container.component.html
@@ -1,4 +1,4 @@
 <div id="container">
   <strong>{{ name }}</strong>
-  <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <p>L'API du bus-mj est encore disponnible sur <a target="_blank" rel="noopener noreferrer" href="https://bus-mj.onrender.com/">https://bus-mj.onrender.com</a>, ou installer en tant que package javascript: npm install bus-mj</p>
 </div>
