--- a/src/app/explore-container/explore-container.component.html
+++ b/src/app/explore-container/explore-container.component.html
@@ -1,4 +1,5 @@
 <div id="container">
   <strong>{{ name }}</strong>
-  <p>L'API du bus-mj est encore disponnible sur <a target="_blank" rel="noopener noreferrer" href="https://bus-mj.onrender.com/">https://bus-mj.onrender.com</a>, ou installer en tant que package javascript: npm install bus-mj</p>
+  <br> (pas encore disponnible)
+  <p>L'API du bus-mj est encore disponnible sur <a target="_blank" rel="noopener noreferrer" href="https://bus-mj.onrender.com/">https://bus-mj.onrender.com</a>, ou installer en tant que package javascript: <br> npm install bus-mj</p>
 </div>
