--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,28 +1,67 @@
-<ion-header [translucent]="true">
-  <ion-toolbar color="warning">
-    <ion-title>
-      Tous les bus
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <div class="container" *ngIf="chargeShow==true">
-    <ion-spinner name="circles"></ion-spinner>
-    <ion-label id="label">Chargement ...</ion-label>
-  </div>
+  <div class="content">
+    <div class="titre">
+      <div class="menu">
+        <ion-icon id="open-modal" name="person-circle-outline" size="large"></ion-icon>
+        <ion-icon name="search-outline" routerLink="/tabs/tab3" size="large"></ion-icon>
+      </div>
+      <h1>Bus Nakay</h1>
+      <p>Avec Bus Nakay, deplacement facile, chemin assure, emplacement connue, navigation hors ligne.</p>
+      <div class="button">
+        <ion-button expand="round" routerLink="/tabs/tab2"><ion-icon slot="start" name="walk-outline"></ion-icon>Commencer<ion-icon slot="end" name="arrow-forward-outline"></ion-icon> </ion-button>
+      </div>
+    </div>
+    
+    <ion-modal id="example-modal" trigger="open-modal" #modal>
+      <ng-template>
+        <div class="wrapper">
+          <h1>Bus Nakay</h1>
+  
+          <ion-list>
+            <ion-item (click)="modal.dismiss()">
+              <p>Application de recherche de trajet dans les transport public au Majunga.<br>Envoyez-nous un email si vous avez des amelioration. Utilser l'API avec <ion-badge color="light">npm install bus-mj</ion-badge></p>
+            </ion-item>
+            <ion-item (click)="modal.dismiss()">
+              <a href="https://npmjs.com/package/bus-mj" target="_blank">
+                <ion-icon name="code-outline"></ion-icon>
+                <ion-label>API bus-mj</ion-label>
+              </a>
+            </ion-item>
+            <ion-item (click)="modal.dismiss()">
+              <a href="mailto:seha.karoka@gmail.com">
+                <ion-icon name="mail-outline"></ion-icon>
+                <ion-label>seha.karoka&#64;gmail.com</ion-label>
+              </a>
+            </ion-item>
+          </ion-list>
+        </div>
+      </ng-template>
+    </ion-modal>
 
-  <div class="buslist" *ngIf="chargeShow==false">
-    <ion-card *ngFor="let bus of allBus">
-      <ion-card-content>
-        <ion-list>
-          <ion-item routerLink="../../bus" [queryParams]="{bus_id: bus.BUS_ID, bus_name: bus.BUS_NAME}">
-            <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
-            <ion-label>{{ bus.BUS_NAME }}</ion-label>
-          </ion-item>
-        </ion-list>
-      </ion-card-content>
-    </ion-card>
+    <div class="wave">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#ffc409" fill-opacity="1" d="M0,288L60,293.3C120,299,240,309,360,288C480,267,600,213,720,197.3C840,181,960,203,1080,192C1200,181,1320,139,1380,117.3L1440,96L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path>
+      </svg>
+    </div>
+
+    <div class="container" *ngIf="chargeShow==true">
+      <ion-spinner name="circles"></ion-spinner>
+      <ion-label id="label">Chargement ...</ion-label>
+    </div>
+  
+    <div class="buslist" *ngIf="chargeShow==false">
+      <ion-card *ngFor="let bus of allBus" routerLink="../../bus" [queryParams]="{bus_id: bus.id}">
+        <ion-card-content>
+          <ion-list lines="none">
+            <ion-item>
+              <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
+              <ion-icon name="bus-outline" slot="start"></ion-icon>
+              <ion-label>{{ bus.desc.label }}</ion-label>
+            </ion-item>
+          </ion-list>
+        </ion-card-content>
+      </ion-card>
+    </div>
   </div>
 
 </ion-content>
