--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,16 +1,16 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom" color="warning">
-    <ion-tab-button tab="tab1" href="/tabs/tab1">
-      <ion-icon aria-hidden="true" name="bus-outline"></ion-icon>
+    <ion-tab-button tab="tab2" href="/tabs/tab2">
+      <ion-icon aria-hidden="true" name="location-outline"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2" href="/tabs/tab2">
-      <ion-icon aria-hidden="true" name="search-outline"></ion-icon>
+    <ion-tab-button tab="tab1" href="/tabs/tab1">
+      <ion-icon aria-hidden="true" name="home-outline"></ion-icon>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3" href="/tabs/tab3">
-      <ion-icon aria-hidden="true" name="map-outline"></ion-icon>
+      <ion-icon aria-hidden="true" name="search-outline"></ion-icon>
     </ion-tab-button>
   </ion-tab-bar>
 
