--- a/src/app/bus/bus.page.html
+++ b/src/app/bus/bus.page.html
@@ -7,20 +7,20 @@
 
 <ion-content [fullscreen]="true" class="contener">
   <div class="bus-image">
-    <app-bus-img [busColor]="bus.color" [firstBand]="bus.band[0]" [secondBand]="bus.band[1] || bus.band[0]" [busBoard]="bus.board"/>
+    <!-- <app-bus-img [busColor]="bus.color" [firstBand]="bus.band[0]" [secondBand]="bus.band[1] || bus.band[0]" [busBoard]="bus.board"/> -->
   </div>
   <ion-card>
     <ion-card-content>
       <ion-card-title>Caractéristiques à connaître sur ce bus:</ion-card-title>
-      <div class="desc">Couleur du bus: <ion-badge [color]="ionColorOf(bus.color)">{{ colorOf(bus.color) }}</ion-badge></div>
-      <div class="desc">Couleur de la bande sur le côté: <ion-badge *ngFor="let c of bus.band" [color]="ionColorOf(c)">{{ colorOf(c) }}</ion-badge></div>
-      <div class="desc">Couleur de la plaque: <ion-badge [color]="ionColorOf(bus.board || 'white')">{{ colorOf(bus.board || '') }}</ion-badge></div>
+      <div class="desc">Couleur du bus: <ion-badge [color]="ionColorOf(bus.tags.colour)">{{ colorOf(bus.tags.colour) }}</ion-badge></div>
+      <!-- <div class="desc">Couleur de la bande sur le côté: <ion-badge *ngFor="let c of bus.band" [color]="ionColorOf(c)">{{ colorOf(c) }}</ion-badge></div>
+      <div class="desc">Couleur de la plaque: <ion-badge [color]="ionColorOf(bus.board || 'white')">{{ colorOf(bus.board || '') }}</ion-badge></div> -->
       </ion-card-content>
   </ion-card>
-  <div class="arret" *ngIf="busStop && busStop.length">
-    <div class="bus-desc">Il y a {{ busStop.length }} arrêts connus sur cette ligne, du point de départ "{{ labelOf(busStop[0]) }}" jusqu'à "{{ labelOf(busStop[busStop.length -1]) }}".</div>
+  <div class="arret" *ngIf="stops && stops.length">
+    <div class="bus-desc">Il y a {{ stops.length }} arrêts connus sur cette ligne, du point de départ "{{ stops[0].label }}" jusqu'à "{{ stops[stops.length - 1].label }}".</div>
     <div>Trajet du circulation:</div>
-    <app-stop-list [StopList]="busStop"/>
+    <app-stop-list [StopList]="stops"/>
   </div>
   <div class="data_empty"><i>Les données ne sont pas encore complètes. Collaborez avec nous pour les améliorer.</i></div>
   
