--- a/src/app/modal-bus/modal-bus.component.html
+++ b/src/app/modal-bus/modal-bus.component.html
@@ -1,4 +1,4 @@
-<ion-modal trigger="open-modal-{{bus.BUS_ID}}" [initialBreakpoint]="0.75" [breakpoints]="[0.75, 1]" #modal>
+<!-- <ion-modal trigger="open-modal-{{bus.BUS_ID}}" [initialBreakpoint]="0.75" [breakpoints]="[0.75, 1]" #modal>
   <ng-template>
     <ion-content>
       
@@ -21,4 +21,4 @@
       
     </ion-content>
   </ng-template>
-</ion-modal>
+</ion-modal> -->
