--- a/src/app/stop-list/stop-list.component.html
+++ b/src/app/stop-list/stop-list.component.html
@@ -1,5 +1,5 @@
 <ul class="progress">
   <li class="progress__item" *ngFor="let stop of StopList">
-    <p class="progress__title">{{ labelOf(stop) }}</p>
+    <p class="progress__title">{{ stop.label }}</p>
   </li>
 </ul>
