--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -19,29 +19,31 @@
   
           <ion-list>
             <ion-item (click)="modal.dismiss()">
-              <p>Application de recherche de trajet dans les transport public au Majunga. <br>
-                Envoyez-nous un email si vous avez des amelioration. Utilser l'API avec <ion-badge color="light">npm install bus-mj</ion-badge></p>
+              <p>Application dédiée à la recherche et à l’optimisation des trajets en transports publics à Majunga.<br>
+                Envie d’améliorer le projet ? Intégrez et exploitez l’API via
+                  <ion-badge color="light">npm install bus-mj</ion-badge> </p>
             </ion-item>
-            <ion-item (click)="modal.dismiss()">
-              <a href="https://npmjs.com/package/bus-mj" target="_blank">
-                <ion-icon name="logo-nodejs"></ion-icon>
-                <ion-label>API bus-mj</ion-label>
-              </a>
-            </ion-item>
+           <ion-item button (click)="modal.dismiss()" href="https://www.npmjs.com/package/bus-mj" target="_blank">
+            <ion-icon slot="start" name="logo-nodejs"></ion-icon>
+            <ion-label>
+              <h3>API bus-mj</h3>
+              <p>Documentation et installation npm</p>
+            </ion-label>
+          </ion-item>
 
-            <ion-item (click)="modal.dismiss()">
-              <a href="https://github.com/selestinohajaniaina/bus-mahajanga-api" target="_blank">
-                <ion-icon name="code-slash-outline"></ion-icon>
-                <ion-label>Code source collaboratif</ion-label>
-              </a>
-            </ion-item>
+          <ion-item button (click)="modal.dismiss()" href="https://github.com/selestinohajaniaina/bus-mahajanga-api" target="_blank">
+            <ion-icon slot="start" name="code-slash-outline"></ion-icon>
+            <ion-label>
+              <h3>Code source</h3>
+              <p>Projet open source collaboratif</p>
+            </ion-label>
+          </ion-item>
 
-            <ion-item (click)="modal.dismiss()">
-              <a href="mailto:seha.karoka@gmail.com">
-                <ion-icon name="mail-outline"></ion-icon>
-                <ion-label>seha.karoka&#64;gmail.com</ion-label>
-              </a>
-            </ion-item>
+          <ion-item (click)="modal.dismiss()" href="mailto:selestinohajaniaina@gmail.com">
+            <ion-icon name="mail-outline"></ion-icon>
+            <ion-label>selestinohajaniaina&#64;gmail.com</ion-label>
+          </ion-item>
+
           </ion-list>
         </div>
       </ng-template>
@@ -59,13 +61,13 @@
     </div>
   
     <div class="buslist" *ngIf="chargeShow==false">
-      <ion-card *ngFor="let bus of allBus" routerLink="../../bus" [queryParams]="{bus_id: bus.id}">
+      <ion-card *ngFor="let bus of allBus" routerLink="../../bus" [queryParams]="{relation_id: bus.id}">
         <ion-card-content>
           <ion-list lines="none">
             <ion-item>
               <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
               <ion-icon name="bus-outline" slot="start"></ion-icon>
-              <ion-label>{{ bus.desc.label }}</ion-label>
+              <ion-label>{{ bus.tags.name }}</ion-label>
             </ion-item>
           </ion-list>
         </ion-card-content>
