--- a/src/app/bus/bus.page.html
+++ b/src/app/bus/bus.page.html
@@ -7,14 +7,14 @@
 
 <ion-content [fullscreen]="true" class="contener">
   <div class="bus-image">
-    <!-- <app-bus-img [busColor]="bus.color" [firstBand]="bus.band[0]" [secondBand]="bus.band[1] || bus.band[0]" [busBoard]="bus.board"/> -->
+    <app-bus-img [busColor]="bus.tags.color" [firstBand]="bus.tags.band[0]" [secondBand]="bus.tags.band[1] || bus.tags.band[0]" [busBoard]="bus.tags.board"/>
   </div>
   <ion-card>
     <ion-card-content>
       <ion-card-title>Caractéristiques à connaître sur ce bus:</ion-card-title>
-      <div class="desc">Couleur du bus: <ion-badge [color]="ionColorOf(bus.tags.colour)">{{ colorOf(bus.tags.colour) }}</ion-badge></div>
-      <!-- <div class="desc">Couleur de la bande sur le côté: <ion-badge *ngFor="let c of bus.band" [color]="ionColorOf(c)">{{ colorOf(c) }}</ion-badge></div>
-      <div class="desc">Couleur de la plaque: <ion-badge [color]="ionColorOf(bus.board || 'white')">{{ colorOf(bus.board || '') }}</ion-badge></div> -->
+      <div class="desc">Couleur du bus: <ion-badge [color]="ionColorOf(bus.tags.color)">{{ colorOf(bus.tags.color) }}</ion-badge></div>
+      <div class="desc">Couleur de la bande sur le côté: <ion-badge *ngFor="let c of bus.tags.band" [color]="ionColorOf(c)">{{ colorOf(c) }}</ion-badge></div>
+      <div class="desc">Couleur de la plaque: <ion-badge [color]="ionColorOf(bus.tags.board || 'white')">{{ colorOf(bus.tags.board || '') }}</ion-badge></div>
       </ion-card-content>
   </ion-card>
   <div class="arret" *ngIf="stops && stops.length">
