--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -6,7 +6,7 @@
         <ion-icon name="search-outline" routerLink="/tabs/tab3" size="large"></ion-icon>
       </div>
       <h1>Bus Nakay</h1>
-      <p>Avec Bus Nakay, déplacement facile, trajet assuré, emplacement connu et navigation hors ligne.</p>
+      <p>Déplacez-vous facilement à Mahajanga avec Bus Nakay : trouvez votre bus, suivez votre trajet et naviguez sans connexion.</p>
       <div class="button">
         <ion-button expand="round" routerLink="/tabs/tab2"><ion-icon slot="start" name="walk-outline"></ion-icon>Commencer<ion-icon slot="end" name="arrow-forward-outline"></ion-icon> </ion-button>
       </div>
@@ -60,12 +60,12 @@
       <ion-label id="label">Chargement ...</ion-label>
     </div>
 
-    <p class="couter">{{ allCooperative.length }} cooperative(s)</p>
+    <p class="counter">{{ allCooperative.length }} cooperative(s)</p>
 
     <div class="cooperativelist">
       <ion-card>
         <ion-card-content>
-          <ion-card-subtitle color="light">TOUS COOPERATIVE</ion-card-subtitle>
+          <ion-card-subtitle color="light" [style.background]="getOperatorColor('')">TOUS COOPERATIVE</ion-card-subtitle>
           <div class="nbr-container">
             <h1>{{ allBus.length }}</h1>
             <div class="icon-text">
@@ -78,7 +78,7 @@
 
       <ion-card *ngFor="let coop of allCooperative; let i = index" >
         <ion-card-content>
-          <ion-card-subtitle color="light" [style.background]="'var(--ion-color-' + getBusColor(i) + ')'">COOPERATIVE {{ coop }}</ion-card-subtitle>
+          <ion-card-subtitle color="light" [style.background]="getOperatorColor(coop)">COOPERATIVE {{ coop }}</ion-card-subtitle>
           <div class="nbr-container">
             <h1>{{ getBusByCooperative(coop) }}</h1>
             <div class="icon-text">
@@ -90,7 +90,7 @@
       </ion-card>
     </div>
   
-    <p class="couter">{{ allBus.length }} ligne(s)</p>
+    <p class="counter">{{ allBus.length }} ligne(s)</p>
 
     <div class="buslist" *ngIf="chargeShow==false">
       <ion-card *ngFor="let bus of allBus" routerLink="../../bus" [queryParams]="{relation_id: bus.id}">
@@ -99,7 +99,10 @@
             <ion-item>
               <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
               <ion-icon name="bus-outline" slot="start"></ion-icon>
-              <ion-label>{{ bus.tags.name }}</ion-label>
+              <ion-label>
+                {{ bus.tags.name }}
+                <ion-badge [style.background]="getOperatorColor(bus.tags.operator)">{{ bus.tags.operator }}</ion-badge>
+              </ion-label>
             </ion-item>
           </ion-list>
         </ion-card-content>
